second half of goal service